--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ ul {
 }
 
 .main-button {
-  width: 200px;
+  min-width: 200px;
   padding: 10px 32px;
   border-radius: 4px;
   border: 1px solid transparent;
@@ -187,6 +187,7 @@ ul {
 
   width: 528px;
   height: 581px;
+  padding: 40px;
 
   border-radius: 4px;
   background-color: var(--primary-color);
@@ -201,6 +202,12 @@ ul {
   background-color: var(--modal-opacity-bg);
   opacity: 1;
   transition: opacity 250ms var(--cubic-bezier);
+}
+
+.form-title {
+  display: block;
+  margin-bottom: 12px;
+  font-size: 20px;
 }
 
 /* Логотип */
@@ -657,6 +664,7 @@ customerslist .link:active .icon {
 .footer-button {
   display: flex;
   align-items: center;
+  width: 200px;
   padding: 0 29px;
 }
 
