--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@
   --modal-opacity-bg: rgba(0, 0, 0, 0.2);
   --border-close-btn: rgba(0, 0, 0, 0.1);
   --border-input: 1px solid rgba(255, 255, 255, 0.3);
+  --border-input-modal: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 /* Загальні стилі */
@@ -204,10 +205,44 @@ ul {
   transition: opacity 250ms var(--cubic-bezier);
 }
 
+.modal-form {
+  padding-top: 30px;
+}
+
 .form-title {
   display: block;
-  margin-bottom: 12px;
   font-size: 20px;
+}
+
+.form-field {
+  display: block;
+  position: relative;
+  margin-bottom: 28px;
+}
+
+.input-modal {
+  width: 100%;
+  padding: 11px 12px;
+  border-radius: 4px;
+  border: var(--border-input-modal);
+}
+
+.form-label {
+  position: absolute;
+  left: 0;
+  top: -4px;
+  transform: translateY(-100%);
+  font-size: 12px;
+  line-height: 1.17;
+
+  letter-spacing: 0.01em;
+}
+
+.form-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /* Логотип */
