--- a/css/styles.css
+++ b/css/styles.css
@@ -204,14 +204,61 @@ ul {
   opacity: 1;
   transition: opacity 250ms var(--cubic-bezier);
 }
-
-.modal-form {
-  padding-top: 30px;
-}
-
 .form-title {
   display: block;
   font-size: 20px;
+  margin-bottom: 12px;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.form-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--secondary-text-color);
+  margin-bottom: 4px;
+}
+
+.form-input {
+  padding: 11px 12px 11px 42px;
+  border-radius: 4px;
+  border: var(--border-input-modal);
+}
+
+.textarea {
+  padding: 11px 12px;
+  border-radius: 4px;
+  border: var(--border-input-modal);
+  resize: none;
+  height: 120px;
+  margin-bottom: 20px;
+}
+.checkbox-field {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.form-icon {
+  position: absolute;
+  left: 12px;
+  bottom: 11px;
+}
+
+.form-button {
+  display: block;
+  margin: 0 auto;
+}
+/* .modal-form {
+  padding-top: 30px;
 }
 
 .form-field {
@@ -220,9 +267,23 @@ ul {
   margin-bottom: 28px;
 }
 
+.form-field.agree {
+  padding-left: 24px;
+}
+
+.textarea {
+  display: block;
+  width: 100%;
+  min-height: 120px;
+  padding: 11px 12px;
+  border-radius: 4px;
+  border: var(--border-input-modal);
+  resize: none;
+}
+
 .input-modal {
   width: 100%;
-  padding: 11px 12px;
+  padding: 11px 12px 11px 42px;
   border-radius: 4px;
   border: var(--border-input-modal);
 }
@@ -234,8 +295,9 @@ ul {
   transform: translateY(-100%);
   font-size: 12px;
   line-height: 1.17;
-
   letter-spacing: 0.01em;
+
+  color: var(--secondary-text-color);
 }
 
 .form-icon {
@@ -244,6 +306,23 @@ ul {
   top: 50%;
   transform: translateY(-50%);
 }
+
+.checkbox-input {
+  position: absolute;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.checkbox-icon-checked {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  border-radius: 4px;
+  background-color: var(--accent-color);
+  fill: var(--primary-color);
+} */
 
 /* Логотип */
 
