--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,7 @@ input {
   padding: 11px 12px 11px 42px;
   border-radius: 4px;
   border: var(--border-input-modal);
+  outline: none;
   transition: border 250ms var(--cubic-bezier);
 }
 
